--- a/app/src/main/res/layout-v21/activity_map.xml
+++ b/app/src/main/res/layout-v21/activity_map.xml
@@ -20,32 +20,30 @@
         android:background="@drawable/white_border"
         android:elevation="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp"
-        tools:targetApi="lollipop">
+        tools:layout_editor_absoluteX="10dp">
 
         <ImageView
             android:id="@+id/ic_magnify"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/ic_magnify_foreground"
-            tools:ignore="ContentDescription"
-            android:layout_marginStart="10dp" />
+            android:contentDescription="@string/todo" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/ic_magnify"
+            android:layout_toEndOf="@id/ic_magnify"
             android:layout_centerVertical="true"
             android:textSize="15sp"
             android:textColor = "#000"
             android:id="@+id/input_search"
             android:background="@null"
-            android:hint="Search Weather By Country, City or ZIP Code"
+            android:hint="@string/search_weather_by_country_city_or_zip_code"
             android:imeOptions="actionSearch"
-            tools:ignore="Autofill,HardcodedText,TextFields"
-            android:layout_toEndOf="@id/ic_magnify" />
+            android:autofillHints="Search"
+            tools:ignore="TextFields" />
 
     </RelativeLayout>
 
@@ -54,22 +52,20 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_below="@+id/relLayout"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_gps_foreground"
-        tools:ignore="ContentDescription"
-        android:layout_alignParentEnd="true" />
+        android:contentDescription="@string/Home" />
 
     <ImageView
         android:id="@+id/ic_info"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_below="@+id/relLayout"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_info_foreground"
-        android:layout_alignParentStart="true"
-        tools:ignore="ContentDescription" />
+        android:contentDescription="@string/todo" />
 
 
 </RelativeLayout>
