--- a/app/src/main/res/layout/weather_activity.xml
+++ b/app/src/main/res/layout/weather_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,8 +16,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
-        tools:context=".Weather_activity"
-        android:layout_weight="1" >
+        tools:context=".Weather_activity">
 
         <TextView
             android:id="@+id/cityText"
@@ -25,7 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#990000"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
         </TextView>
 
         <TextView
@@ -45,8 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/cityText"
             android:layout_toRightOf="@id/temp"
-            android:layout_alignBaseline="@id/temp">
+            android:layout_alignBaseline="@id/temp"
+            android:layout_toEndOf="@id/temp">
         </TextView>
+
         <TextView
             android:id="@+id/skydesc"
             android:layout_width="wrap_content"
@@ -55,22 +57,23 @@
             android:layout_below="@id/temp"
             android:layout_alignStart="@id/temp"
             android:layout_toRightOf="@id/temp"
-            android:layout_alignLeft="@id/temp">
-        </TextView>
+            android:layout_alignLeft="@id/temp"
+            android:layout_toEndOf="@id/temp" />
 
         <!-- Image weather condition -->
         <ImageView android:id="@+id/condIcon"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignTop="@id/temp"
-            android:layout_toRightOf="@id/temp"/>
+            android:layout_toRightOf="@id/temp"
+            android:layout_toEndOf="@id/temp"
+            android:contentDescription="@string/todo_me" />
     </RelativeLayout>
     <android.support.v4.view.ViewPager
 
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="6" >
+        android:layout_height="match_parent">
         <android.support.v4.view.PagerTitleStrip
             android:id="@+id/pager_title_strip"
             android:layout_width="match_parent"
@@ -82,4 +85,4 @@
             android:textColor="#fff" />
 
     </android.support.v4.view.ViewPager>
-</LinearLayout>
+</RelativeLayout>
