--- a/app/src/main/res/layout/weather_activity.xml
+++ b/app/src/main/res/layout/weather_activity.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
-    tools:context=".MainActivity"
+    tools:context=".Weather_activity"
     android:orientation="vertical" >
     <RelativeLayout
         android:layout_width="match_parent"
