--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,4 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".WeatherActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        >
+
+        <TextView
+            android:id="@+id/cityText"
+            style="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#990000"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        </TextView>
+
+        <TextView
+            android:id="@+id/temp"
+            style="@style/AppTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cityText"
+            android:textColor="#000000"
+            android:textSize="130sp"
+            android:layout_centerHorizontal="true">
+        </TextView>
+        <TextView
+            android:id="@+id/unittemp"
+            android:layout_width="wrap_content"
+            style="?android:attr/textAppearanceMedium"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cityText"
+            android:layout_toRightOf="@id/temp"
+            android:layout_alignBaseline="@id/temp"
+            android:layout_toEndOf="@id/temp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/skydesc"
+            android:layout_width="wrap_content"
+            style="?android:attr/textAppearanceMedium"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/temp"
+            android:layout_alignStart="@id/temp"
+            android:layout_toRightOf="@id/temp"
+            android:layout_alignLeft="@id/temp"
+            android:layout_toEndOf="@id/temp" />
+
+        <!-- Image weather condition -->
+        <ImageView android:id="@+id/condIcon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignTop="@id/temp"
+            android:layout_toRightOf="@id/temp"
+            android:layout_toEndOf="@id/temp"
+            android:contentDescription="@string/todo_me" />
+    </RelativeLayout>
+    <androidx.viewpager.widget.ViewPager
+
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.viewpager.widget.PagerTitleStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="#000000"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp"
+            android:textColor="#fff" />
+
+    </androidx.viewpager.widget.ViewPager>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
