--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,86 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeatherActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        >
+    <TextView
+        android:id="@+id/cityText"
+        style="?android:attr/textAppearanceMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        tools:ignore="MissingConstraints" />
 
-        <TextView
-            android:id="@+id/cityText"
-            style="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#990000"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-        </TextView>
+    <ImageView
+        android:id="@+id/condIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/cityText"
+        tools:ignore="MissingConstraints" />
 
-        <TextView
-            android:id="@+id/temp"
-            style="@style/AppTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cityText"
-            android:textColor="#000000"
-            android:textSize="130sp"
-            android:layout_centerHorizontal="true">
-        </TextView>
-        <TextView
-            android:id="@+id/unittemp"
-            android:layout_width="wrap_content"
-            style="?android:attr/textAppearanceMedium"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cityText"
-            android:layout_toRightOf="@id/temp"
-            android:layout_alignBaseline="@id/temp"
-            android:layout_toEndOf="@id/temp">
-        </TextView>
+    <TextView
+        android:id="@+id/condDescr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/condIcon"
+        android:layout_alignLeft="@id/condIcon"
+        tools:ignore="MissingConstraints" />
 
-        <TextView
-            android:id="@+id/skydesc"
-            android:layout_width="wrap_content"
-            style="?android:attr/textAppearanceMedium"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/temp"
-            android:layout_alignStart="@id/temp"
-            android:layout_toRightOf="@id/temp"
-            android:layout_alignLeft="@id/temp"
-            android:layout_toEndOf="@id/temp" />
+    <TextView
+        android:id="@+id/temp"
+        style="@style/tempStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_alignBaseline="@id/condDescr"
+        android:layout_toRightOf="@id/condDescr"
+        tools:ignore="MissingConstraints" />
 
-        <!-- Image weather condition -->
-        <ImageView android:id="@+id/condIcon"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignTop="@id/temp"
-            android:layout_toRightOf="@id/temp"
-            android:layout_toEndOf="@id/temp"
-            android:contentDescription="@string/todo_me" />
-    </RelativeLayout>
-    <androidx.viewpager.widget.ViewPager
+    <TextView
+        android:id="@+id/pressLab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/condDescr"
+        android:text="Pressure"
+        android:layout_marginTop="15dp"
+        tools:ignore="MissingConstraints" />
 
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.viewpager.widget.PagerTitleStrip
-            android:id="@+id/pager_title_strip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="#000000"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:textColor="#fff" />
+    <TextView
+        android:id="@+id/press"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/pressLab"
+        android:layout_toRightOf="@id/pressLab"
+        style="@style/valData"
+        tools:ignore="MissingConstraints"
+        android:layout_toEndOf="@id/pressLab" />
 
-    </androidx.viewpager.widget.ViewPager>
+    <TextView
+        android:id="@+id/humLab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/pressLab"
+        android:text="Humidity"
+        tools:ignore="MissingConstraints" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/hum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/humLab"
+        android:layout_toRightOf="@id/humLab"
+        android:layout_marginLeft="4dp"
+        style="@style/valData"/>
+
+    <TextView
+        android:id="@+id/windLab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/humLab"
+        android:text="Wind" />
+
+    <TextView
+        android:id="@+id/windSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/windLab"
+        android:layout_toRightOf="@id/windLab"
+        android:layout_marginLeft="4dp"
+        style="@style/valData" />
+
+    <TextView
+        android:id="@+id/windDeg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/windLab"
+        android:layout_toRightOf="@id/windSpeed"
+        android:layout_marginLeft="4dp"
+        style="@style/valData"/>
+
+</RelativeLayout>
