--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cityText"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="ContentDescription,MissingConstraints"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/condDescr"
@@ -28,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/condIcon"
         android:layout_alignLeft="@id/condIcon"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:layout_alignStart="@id/condIcon" />
 
     <TextView
         android:id="@+id/temp"
@@ -38,7 +39,9 @@
         android:layout_marginLeft="12dp"
         android:layout_alignBaseline="@id/condDescr"
         android:layout_toRightOf="@id/condDescr"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:layout_marginStart="12dp"
+        android:layout_toEndOf="@id/condDescr" />
 
     <TextView
         android:id="@+id/pressLab"
@@ -48,7 +51,8 @@
         android:layout_below="@id/condDescr"
         android:text="Pressure"
         android:layout_marginTop="15dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/press"
@@ -67,7 +71,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/pressLab"
         android:text="Humidity"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/hum"
@@ -76,7 +81,9 @@
         android:layout_alignBaseline="@id/humLab"
         android:layout_toRightOf="@id/humLab"
         android:layout_marginLeft="4dp"
-        style="@style/valData"/>
+        style="@style/valData"
+        android:layout_toEndOf="@id/humLab"
+        android:layout_marginStart="4dp" />
 
     <TextView
         android:id="@+id/windLab"
@@ -84,7 +91,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/humLab"
-        android:text="Wind" />
+        android:text="Wind"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/windSpeed"
@@ -93,7 +101,9 @@
         android:layout_alignBaseline="@id/windLab"
         android:layout_toRightOf="@id/windLab"
         android:layout_marginLeft="4dp"
-        style="@style/valData" />
+        style="@style/valData"
+        android:layout_toEndOf="@id/windLab"
+        android:layout_marginStart="4dp" />
 
     <TextView
         android:id="@+id/windDeg"
@@ -102,6 +112,8 @@
         android:layout_alignBaseline="@id/windLab"
         android:layout_toRightOf="@id/windSpeed"
         android:layout_marginLeft="4dp"
-        style="@style/valData"/>
+        style="@style/valData"
+        android:layout_toEndOf="@id/windSpeed"
+        android:layout_marginStart="4dp" />
 
 </RelativeLayout>
